--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 blinker==1.9.0
 click==8.2.1
 flask==3.1.1
-gunicorn==23.0.0
+flask-sqlalchemy==3.1.1
 itsdangerous==2.2.0
 jinja2==3.1.6
 markupsafe==3.0.2
-packaging==25.0
+sqlalchemy==2.0.41
+typing-extensions==4.14.0
 werkzeug==3.1.3
