--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,5 +15,5 @@ dependencies = [
     "sqlalchemy>=2.0.41",
     "typing-extensions>=4.14.0",
     "werkzeug>=3.1.3",
-    "gunicorn>=23.0.0",
+    "waitress>=3.0.0",
 ]
