--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# 環境変数ファイル（認証情報を含む）
+.env
+
 # Python-generated files
 __pycache__/
 *.py[oc]
@@ -18,3 +21,13 @@ instance/
 
 # Backup files
 backups/
+
+# ログファイル
+logs/
+*.log
+
+# IDE設定
+.vscode/
+.idea/
+*.swp
+*.swo
