--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,4 +16,6 @@ dependencies = [
     "typing-extensions>=4.14.0",
     "werkzeug>=3.1.3",
     "waitress>=3.0.0",
+    "bcrypt>=4.0.0",
+    "python-dotenv>=1.0.0",
 ]
